# gradesta

./: .gitignore  .gitmodules  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SOLVE_THESE_PROBLEMS.md  cypress-overlay.nix  ethical_codex.md  i18n.toml  shell.nix  workspace.code-workspace
SOLVExTHESExPROBLEMS/: 2022_01_shopping_for_vps.md  PT1_2022_01_green_hosting.md  PT2_2022_01_speech_recognition.md  PT3_2022_01_live_coding_stream_hosting.md  PT4_2022_01_hugo_static_website_theme_for_site_without_analytics_and_other_non_gdpr_stuff.md  PT5_2022_07_run_one_off_tasks_in_cloud.md  PT6-2022-09-universal-cross-platform-CICD-config-languge.md
dev-utils/: error-code.py
docs/: index.html
frontend/: .gitignore  index.html  package-lock.json  package.json  webpack.config.js
frontend/urwid-simple-debug-client/: pyproject.toml  setup.py
frontend/urwid-simple-debug-client/gradesta_urwid_debug_client/: client.py
git-hooks/: pre-commit
gradesta-s.r.o. comercial.stuff/: ethical_codex.md  top_secret_business_plan.get-rich-quick.md
gradesta-s.r.o.-commercial-stuff/: BRAND.md
gradesta-s.r.o.-commercial-stuff/interal-tooling/screencasts/: Cargo.toml
gradesta-s.r.o.-commercial-stuff/interal-tooling/screencasts/src/: main.rs
gradesta-s.r.o.-commercial-stuff/interal-tooling/screencasts/src/screencasts/: config.rs  fetch_duration.rs  frontmatter.rs  inspect.rs  metadata.rs  mod.rs  parsing.rs  print_label.rs  publish.rs  save_screencast_metadata.rs  screencast.rs  transcode_and_upload.rs
kcf/: LICENSE.md  PRIORTY.md  README.md  TIME.md  TIPS_FOR_PROGRAMMERS.md
kcf/tools/kcf_tasks/: README.md  pyproject.toml  setup.cfg  setup.py
kcf/tools/kcf_tasks/kcf_tasks/: estimate_assessment.py  gather_durations.py  gather_tasks.py  main.py  milestones.py  parse_task_attributes.py  task.py  time_cost_estimates.py
manager/: Cargo.toml  README.md  test.sh
manager/gm/: Cargo.toml  watch
manager/gm/src/: main.rs
manager/gm/src/ageing_cellar/: organize_socket_dir.rs
manager/gm/src/work_table/: cell_db.rs  local_connection_watcher.rs  mod.rs  organize_socket_dir.rs  organize_sockets_dir.rs
manager/gm/src/work_table/test_channels/: mod.rs
manager/locale/: cs.ftl  en.ftl
manager/src/: main.rs
manager/src/ageing_cellar/: clean_socket_dir_and_kill_orphan_services_interactively.rs  configuration.rs  localizer.rs  lock_sockets_dir.rs  mod.rs  organize_sockets_dir.rs  parse_args_and_environment.rs  watch_socket_dir.rs
manager/src/work_table/: cell_db.rs  clean.rs  clean_socket_dir.rs  clean_socket_dir_and_kill_orphan_services_interactively.rs  configuration.rs  display_running_services.rs  display_term_kill_running_services.rs  localizer.rs  lock_sockets_dir.rs  main_loop.rs  mod.rs  parse_args_and_environment.rs  watch_socket_dir.rs
manager/testbins/test-socket-holder/: Cargo.toml
manager/testbins/test-socket-holder/src/: main.rs
protocol/: gradesta-level-0.odt  level0.capnp
protocol/python/: pyproject.toml
protocol/python/gradesta_level0/: level0.capnp  level0.py  level0_capnp_cython.pyx
rust-util/: Cargo.toml  watch
rust-util/src/: lib.rs
rust-util/src/ageing_cellar/: mod.rs
rust-util/src/ageing_cellar/test_channels/: mod.rs
screencasts/: 2022-05-14-gradesta-manager-1.yaml  2022-05-14-gradesta-static-site-2.yaml  2022-05-14-gradesta-static-site-3.yaml  2022-05-14-gradesta-static-site-4.yaml  2022-05-14-gradesta-static-site-5.yaml  2022-07-08-3f1fe08707a4ce6932e5282b8cf30ff9.yaml  2022-07-09-669cde795a73e3aec1fdc1fd82929c9b.yaml  2022-07-24-0b0a47829b3a9f8f57f19b7dd7c01117.yaml  2022-07-24-657a1bb245023357b9a37519f01b4fea.yaml  2022-07-25-26d4043b2ab967ea24db5d20dd85c99e.yaml  2022-08-03-a79910b214ad854b387814f1be3a57fe.yaml  2022-08-06-8d7e60bc62b16cf07726c6b0439c6490.yaml  2022-08-06-efc2c67b6d514a56e80c03fa956fb08d.yaml  2022-08-14-1fa30af99995269ff537fde989bfcb19.yaml  2022-08-14-6123c72fb3e6f15d517956926a0a6767.yaml  2022-08-14-a2fa42c311bd0bdee43e2378d5672862.yaml  2022-08-15-8054f51c60c1ab3474b6a5218e34b7e3.yaml  2022-08-17-91220f13472bbf0bdfdb43e97e90dde3.yaml  2022-09-03-e6ad8aa9-4f96-493c-a7c1-4279f609876e.yaml  2022-09-04-59266aa1-467a-4f05-a4b8-593f5fb0704b.yaml  2022-09-04-e3e86b1a-7264-4409-bae9-71906fab2307.yaml  2022-09-06-4f595839-95a0-435c-ba70-b4862c235749.yaml  2022-09-06-54ca2115-0145-4812-bd77-c3ed72d1cae9.yaml  2022-09-06-5961a13e-21d7-4b4f-9771-a5556d4daeec.yaml  2022-09-18-5230cbd5-b90e-49f6-86e6-a827862e6c43.yaml  2022-09-18-9fc4aad5-ea6a-44ef-95f9-726e6a63ef35.yaml  2022-10-16-96204831-6289-4287-9448-6b9ef48d6786.yaml  2022-10-19-d18025de-89ee-4bfb-a454-b0f141b90485.yaml  2022-10-23-82211852-1d87-49bd-93e5-36700c041949.yaml  2022-10-23-a7e36604-6a2d-4b94-8be8-37fe7ac6c700.yaml  2022-10-23-bae77bde-4b59-4479-a225-debdb6428579.yaml  2022-8-19-70025373-cf05-4e85-bff4-d9909662cc26.yaml  2022-8-19-7dcb7ef8-faf3-47af-98ec-d365d02ab0dc.yaml  2022-8-21-11eddf31-9be5-4450-a7d7-8fdd02fda669.yaml  2022-8-22-2ac231f3-6fdd-4f83-8b19-b24b40c065dd.yaml  2022-8-28-2ddff790-a50c-44dc-8490-4cc23c769360.yaml  2022-8-28-39d0cd84-d4c3-4cf9-b21c-220efcbc256d.yaml  (+20 more)
services/lib/python/: cell_reference_db.py  gradesta_locales.py  gradesta_service.py  level0_yaml.py  parse_address.py  pyproject.toml  test_level0_yaml.py  test_parse_address.py
services/lib/python/gradestalib/: cell_reference_db.py  gradesta_service.py  level0_yaml.py  live_cell_db.py  low_level_tester.py  parse_address.py
services/tick-tack-toe/: README.md  cell_reference_db.py  gradesta-urwid-fullscreen.py  gradesta_locales.py  gradesta_service.py  level0_extras.py  level0_yaml.py  low_level_tester.py  parse_address.py  paths.py  pyproject.toml  setup.py  simple_topology_expressions.py  test_cell_reference_db.py  test_level0_extras.py  test_level0_yaml.py  test_simple_topology_expressions.py  test_tick_tack_toe.py  tick_tack_toe.py
services/tick-tack-toe/example_yaml/: all_fields.yaml  hello_world_data_update.yml  tick-tack-toe-replay.yaml
services/tick-tack-toe/tick_tack_toe/: test_tick_tack_toe.py  tick_tack_toe.py
services/tick-tack-toe/zmq/: client.py  server.py
(+140 files in other folders)
