[package]
name = "rust-util"
version = "0.0.0"
edition = "2018"
license = "LGPLv3"
categories = ["filesystem", "os"]

[dependencies]
nix = "0.17.0"
tempdir = {version = "0.3.7", optional=true}
sha2 =  {version = "0.10.0", optional=true}
hex = {version = "0.4.3", optional=true}
zmq = {version = "0.9.2", optional=true}

[features]
testing = ["tempdir", "sha2", "hex", "zmq"]

