[tool.poetry]
name = "urwid-simple-debug-client"
version = "0.1.0"
description = ""
authors = ["Timothy Hobbs <goodnight@gradesta.com>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.7"
urwid = "^2.1.2"
gradesta-level0 = {path = "../../protocol/python"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
