[package]
name = "gm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libzmq = "0.2.5"
clap = "2.33.3"
notify = "4.0.17"
ofiles = "0.2.0"
nix = "0.23.0"
itertools = "0.10.3"

[dev-dependencies]
tempdir = "0.3.7"