[package]
name = "gm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9.2"
clap = "2.33.3"
notify = "4.0.17"
ofiles = "0.2.0"
nix = "0.23.0"
itertools = "0.10.3"

[dev-dependencies]
tempdir = "0.3.7"
sha2 =  "0.10.0"
hex = "0.4.3"