cargo-features = ["edition2021"]
[package]
name = "gm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9.2"
clap = "2.33.3"
notify = "4.0.17"
ofiles = "0.2.0"
nix = "0.23.0"
itertools = "0.10.3"
"rust-util" = { path = "../../rust-util" }

[dev-dependencies]
tempdir = "0.3.7"
"rust-util" = { path = "../../rust-util", features=["testing"] }

[replace]
"ofiles:0.2.0" = { path = "../../3rd-party/ofiles" }
