[tool.poetry]
name = "gradesta_level0"
version = "0.1.0"
description = ""
authors = ["Timothy Hobbs <goodnight@gradesta.com>"]
license = "LGPLv3"

[tool.poetry.dependencies]
python = "^3.7"
pycapnp = "^1.1.0"
Jinja2 = "^3.0.2"
Cython = "^0.29.24"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
