[tool.poetry]
name = "tick-tack-toe"
version = "0.1.0"
description = ""
authors = ["Timothy Hobbs <timothy@hobbs.cz>"]

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^2.11.3"
pycapnp = "^1.0.0"
Cython = "^0.29.23"
pyzmq = "^22.0.3"
deepdiff = "^5.5.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
