[package]
name = "screencasts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["cargo"] }
nom = { version = "7.1.1", features = ["alloc"] }
os_str_bytes = "=6.1.0"