[metadata]
name = kcf-tasks
version = 0.0.1
license="CC0"
author = Timothy Hobbs
author_email = timothy@hobbs.cz
url = "https://github.com/gradesta/gradesta/kcf",
download_url = "http://pypi.python.org/pypi/kcf-tasks/",
description = "Manage tasks in a Kanban Code Flow repo",


[options]
packages = kcf-tasks
install_requires = 
    pytimeparse
    pyyaml

[options.entry_points]
console_scripts =
    kcf-tasks = kcf_tasks.main:main

[options.extras_require]
test = 
    pytest
    black
    pytest-cov
    pytest-runner