[package]
name = "test-socket-holder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9.2"
clap = { version = "3.1.18", features = ["cargo"] }
tokio = { version = "1", features = ["full"] }
signal-hook = "0.3.14"
